refactor: comment 조회 로직 변경, response에 parentAuthor와 depth 추가